# FlakeForge

./: -External- Meta OpenEnv Hackathon Participant Help Guide.txt  .dockerignore  .env.template  .gitignore  ACTION_OBSERVATION_STATE_REWARD_DEEP_DIVE.md  Dockerfile  Dockerfile.runner  FLAKEFORGE_WRITEUP.md  HACKATHON_ARCHITECTURE_REVIEW.md  Hackathon FAQs (participants).txt  INDEX.md  INFERENCE_TEST_READY.md  MISSION_ACCOMPLISHED.md  OpenEnv_Hackathon_Resources.txt  PRESENT_ARCHITECTURE_CONTEXT.md  PROGRESS_REPORT.md  QUICKSTART.bat  QUICKSTART.py  README.md  READY_FOR_TEST.md  RUN_TEST.sh  SETUP_COMPLETE.md  START_HERE.md  TEST_SETUP_COMPLETE.md  TRAINING_DATA_DESIGN.md  V2_CODE_FIXES_LOG.md  V2_IMPLEMENTATION_SUMMARY.md  __init__.py  _bench.py  _curate_and_install.py  _ff_diag.txt  _tmp_inventory.py  build_idoft_dataset.py  client.py  implementation_plan.md  index.html  inference.py  models.py  openenv.yaml  push_space.py  (+5 more)
agent/: __init__.py  action_schema.py  judge.py  observation_utils.py  roles.py  tool_loop.py  unified_agent.py
data/: inference_example_episode.json
openenv_FlakeForge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
outputs/: flakeforge_summary_20260423_004531.json  flakeforge_summary_20260423_113253.json  full_trace_1489db08-6f14-4796-8b23-dadf88635839.json  full_trace_2360eb37-1442-4707-8d02-f9d8b8cad877.json  full_trace_5365a8b7-550f-473c-b82c-cd77ed8f3f12.json  full_trace_63648dbc-5af4-4b80-b4b7-f76c8525941d.json  full_trace_654c1ba0-9f90-4e9c-a602-84147e1651f0.json  (+8 more)
scripts/: plot_inference_episode.py
(+206 files in other folders)
